--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: "macos-latest" # macOS arm64
+          - platform: "macos-14" # macOS arm64
             archive: "espeak-ng-libs-macos-arm64.tar.gz"
+
+          - platform: "macos-13" # macOS x86-64
+            archive: "espeak-ng-libs-macos-x86_64.tar.gz"
 
           - platform: "ubuntu-22.04" # Linux x86_64
             archive: "espeak-ng-libs-linux-x86_64.tar.gz"
