--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Uplaod to releases
         run: |
           latestTag=$(gh release view --json tagName --jq '.tagName')
-          gh release upload $latestTag ${{ matrix.archive }}.* --clobber
+          gh release upload $latestTag ${{ matrix.archive }} --clobber
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: bash
