Fix archive format for Windows in GitHub Actions workflow and specify bash shell for build step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
             archive: "espeak-ng-libs-linux-x86_64.tar.gz"
 
           - platform: "windows-latest" # Windows x86_64
-            archive: "espeak-ng-libs-windows-x86_64.zip"
+            archive: "espeak-ng-libs-windows-x86_64.tar.gz"
 
           - platform: "ubuntu-22.04" # Linux x86_64
             archive: "espeak-ng-libs-linux-x86_64.tar.gz"
@@ -35,6 +35,7 @@ jobs:
 
       - name: Build espeakng-loader
         run: ./build.sh
+        shell: bash
 
       - name: Create archive
         run: |
