--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
           - platform: "ubuntu-22.04" # Linux x86_64
             archive: "espeak-ng-libs-linux-x86_64.tar.gz"
 
+          - platform: "ubuntu-20.04" # Linux arm64
+            archive: "espeak-ng-libs-linux-arm64.tar.gz"
+
           - platform: "windows-latest" # Windows x86_64
             archive: "espeak-ng-libs-windows-x86_64.tar.gz"
 
@@ -29,6 +32,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: "true"
+
+      - name: Install Linux arm64 toolchain
+        run: |
+          sudo apt-get install g++-aarch64-linux-gnu
+          echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-g++" >> $GITHUB_ENV
+          echo "CC=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
+          echo "CXX=aarch64-linux-gnu-g++" >> $GITHUB_ENV
+        if: matrix.archive == 'espeak-ng-libs-linux-arm64.tar.gz'
 
       - name: Build espeakng-loader
         run: ./build.sh
