--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -26,9 +26,9 @@ jobs:
             archive: "espeak-ng-libs-windows-x86_64.zip"
             wheel-tag: "py3-none-win_amd64"
 
-          # - platform: "ubuntu-22.04" # Linux aarch64
-          #   archive: "espeak-ng-libs-linux-x86_64.tar.gz"
-          #   wheel-tag: "py3-none-manylinux_2_28_aarch64"
+          - platform: "ubuntu-22.04" # Linux aarch64
+            archive: "espeak-ng-libs-linux-arm64.tar.gz"
+            wheel-tag: "py3-none-manylinux_2_28_aarch64"
 
           # - platform: "windows-latest" # Windows aarch64
           #   archive: "libaec-win-aarch64.zip"
@@ -47,15 +47,10 @@ jobs:
         run: |
           # Download the archive
           curl -LO https://github.com/thewh1teagle/aec/releases/latest/download/${{ matrix.archive }}
-          # Extract based on file extension
-          if [[ "${{ matrix.archive }}" == *.tar.gz ]]; then
-            tar -xzf "${{ matrix.archive }}" -C .
-          elif [[ "${{ matrix.archive }}" == *.zip ]]; then
-            7z x "${{ matrix.archive }}" -o"espeak-ng-libs"
-          fi
+          tar -xzf "${{ matrix.archive }}" -C .
           # Copy appropriate shared libraries to the target directory
           extracted_dir="espak-ng-libs"
-          find "$extracted_dir" -type f \( -name "*.dll" -o -name "*.dylib" -o -name "*.so" \) -exec cp {} src/espeakng-loader/ \;
+          find "$extracted_dir" -type f \( -name "*.dll" -o -name "*.dylib" -o -name "*.so" \) -exec cp {} src/espeakng_loader/ \;
         shell: bash
 
       - name: Build and publish
