--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -43,14 +43,15 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v4
 
-      - name: Prepare libaec
+      - name: Prepare libraries in package
         run: |
           # Download the archive
           curl -LO https://github.com/thewh1teagle/espeakng-loader/releases/latest/download/${{ matrix.archive }}
           tar xf "${{ matrix.archive }}"
           # Copy appropriate shared libraries to the target directory
-          extracted_dir="espak-ng-libs"
-          find "$extracted_dir" -type f \( -name "*.dll" -o -name "*.dylib" -o -name "*.so" \) -exec cp {} src/espeakng_loader/ \;
+          extracted_dir="espeak-ng-libs"
+          # Preserve symbolic links
+          find -L "$extracted_dir" -type f \( -name "*.dll*" -o -name "*.dylib*" -o -name "*.so*" \) -exec cp -P {} src/espeakng_loader/ \;
         shell: bash
 
       - name: Build and publish
