--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -52,6 +52,10 @@ jobs:
           extracted_dir="espeak-ng-libs"
           # Preserve symbolic links
           find -L "$extracted_dir" -type f \( -name "*.dll*" -o -name "*.dylib*" -o -name "*.so*" \) -exec cp -P {} src/espeakng_loader/ \;
+
+          # Show the contents of the package
+          echo "Package contents:"
+          ls -l src/espeakng_loader/
         shell: bash
 
       - name: Build and publish
