--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: bash
-        if: matrix.platform == 'macos-14'
+        if: matrix.platform == 'ubuntu-22.04'
 
       - name: Uplaod to releases
         run: |
