--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "espeakng-loader"
-version = "0.1.2-beta.0"
+version = "0.1.2"
 description = "A Python package that provides shared library loader for eSpeak NG"
 readme = "README.md"
 authors = [
